<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorText"
        android:orientation="horizontal"
        android:padding="3dp">

        <Button
            android:id="@+id/startBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/start_string"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/stopBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/stop_string"
            android:textColor="@color/colorText" />

    </LinearLayout>

    <TextView
        android:id="@+id/statusTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/not_scanned_string"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/fileStatsTv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/buttonContainer"
        android:background="@color/colorSecondaryText"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/detailsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fileStatsTv"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/big_files_list"
                android:visibility="invisible"
                android:id="@+id/bigFilesTv"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/bigFilesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/most_files_list"
                android:visibility="invisible"
                android:id="@+id/mostFilesTv"
                android:textSize="20sp" />


            <ListView
                android:id="@+id/mostFilesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
